<resources>
    <string name="header_title">Product</string>
    <string name="content_description_ic_icon">Your account</string>
    <string name="sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempo</string>
    <string name="app_name">AppLab!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">-1</string>
    <string name="like">Лайк</string>
    <string name="share">Поделиться</string>
    <string name="description">Описание</string>
    <string name="title">Title</string>
    <string name="subhead">Subhead</string>
    <string name="enabled">Enabled</string>
    <string name="aboutColor">Меняет цвет фона карточки выше при переключении</string>
    <string name="bigText">А это текст полный смысла и очень большой, наверное тут должно быть описание сказочного персонажа или ещё кого-то, вообщем смысл простой - длинный текст, а ещё он не доходит до конца экрана, это фича</string>
</resources>