<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.SecondFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/light_purple"
            app:titleTextColor="@color/black"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="Title"
            app:menu="@menu/second_menu">
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:id="@+id/default_picture"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:src="@drawable/default_image_thin"
        android:contentDescription="@string/description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/big_uga_buga"
        android:layout_width="214dp"
        android:layout_height="48dp"
        app:cornerRadius="100dp"
        android:text="@string/id"
        app:layout_constraintTop_toBottomOf="@id/default_picture"
        app:layout_constraintBottom_toBottomOf="@id/default_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        app:layout_constraintTop_toBottomOf="@id/default_picture"
        android:layout_marginTop="42dp"
        android:background="@color/primary_90"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/header_title"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="345dp"
            android:layout_height="100dp"
            android:text="@string/bigText"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/uaa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:layout_marginTop="24dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/materialSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:text="@string/aboutColor"
        /></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/uaa"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="21dp">
        <com.google.android.material.button.MaterialButton
            android:layout_width="100dp"
            android:layout_height="48dp"
            app:cornerRadius="100dp"
            android:text="@string/like"
            android:layout_marginEnd="15dp"
            app:icon="@drawable/baseline_add_24"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="160dp"
            android:layout_height="48dp"
            app:cornerRadius="100dp"
            android:text="@string/share"
            app:icon="@drawable/baseline_add_24"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>